# Ray-Tracing-Project-Cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  colour.h  interval.h  vec3.h
include/: camera.h  colour.h  hittable.h  hittable_list.h  interval.h  mat4.h  material.h  mesh.h  model.h  ray.h  ray_tracing_project.h  sphere.h  triangle.h  vec3.h  vec4.h
src/: archive_scenes.cpp  main.cpp
